Adding support to filter tasks by startedBy (#122)
